# learn-cuda

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt
device_info/: CMakeLists.txt  main.cc
docker/: Dockerfile
fatbinary/: CMakeLists.txt  Makefile  main.cpp  my_section_data.cpp  myld.ld
grid_and_block/: CMakeLists.txt  device.cu  main.cc
grid_and_block/include/: device.h
hello/: CMakeLists.txt  device.cu  main.cc
hello/include/: device.h
sumArray/: CMakeLists.txt  device.cu  main.cc
sumArray/include/: device.h
sumMatrix/: CMakeLists.txt  device.cu  main.cc
sumMatrix/include/: device.h
warp_divergence/: CMakeLists.txt  device.cu  main.cc
warp_divergence/include/: device.h
